platform/kargo/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: kargo
      sectionName: https
  hostnames:
    - kargo.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /github/
      backendRefs:
        - name: kargo-external-webhooks-server
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kargo-api
          port: 80
